# Filler

./: .gitignore  CMakeLists.txt  Makefile  README.md  marrow.filler  test
includes/: filler.h
libft/: Makefile
libft/includes/: libft.h
libft/sources/: ft_arrdel.c  ft_atoi.c
resources/: filler.trace  marrow.filler
sources/: algorithm.c  init.c  main.c  parse.c  plateau_parce.c  solver.c  tools.c
