cmake_minimum_required(VERSION 3.16)
project(Filler C)

set(CMAKE_C_STANDARD 11)

include_directories(includes)
include_directories(libft/includes)

add_executable(marrow.filler
        includes/filler.h
        libft/ft_printf/sources/ft_big_x.c
        libft/ft_printf/sources/ft_c.c
        libft/ft_printf/sources/ft_d.c
        libft/ft_printf/sources/ft_e.c
        libft/ft_printf/sources/ft_f.c
        libft/ft_printf/sources/ft_f_func.c
        libft/ft_printf/sources/ft_format_specifier.c
        libft/ft_printf/sources/ft_o.c
        libft/ft_printf/sources/ft_p.c
        libft/ft_printf/sources/ft_pct.c
        libft/ft_printf/sources/ft_printf.c
        libft/ft_printf/sources/ft_s.c
        libft/ft_printf/sources/ft_setcolor.c
        libft/ft_printf/sources/ft_type.c
        libft/ft_printf/sources/ft_u.c
        libft/ft_printf/sources/ft_width.c
        libft/ft_printf/sources/ft_x.c
        libft/includes/ft_printf.h
        libft/includes/libft.h
        libft/sources/ft_atoi.c
        libft/sources/ft_bzero.c
        libft/sources/ft_copybyte.c
        libft/sources/ft_create_elem.c
        libft/sources/ft_get_number.c
        libft/sources/ft_isalnum.c
        libft/sources/ft_isalpha.c
        libft/sources/ft_isascii.c
        libft/sources/ft_isblanki.c
        libft/sources/ft_isdigit.c
        libft/sources/ft_islower.c
        libft/sources/ft_isprint.c
        libft/sources/ft_isupper.c
        libft/sources/ft_itoa.c
        libft/sources/ft_lstadd.c
        libft/sources/ft_lstdel.c
        libft/sources/ft_lstdelone.c
        libft/sources/ft_lstiter.c
        libft/sources/ft_lstmap.c
        libft/sources/ft_lstnew.c
        libft/sources/ft_memalloc.c
        libft/sources/ft_memccpy.c
        libft/sources/ft_memchr.c
        libft/sources/ft_memcmp.c
        libft/sources/ft_memcpy.c
        libft/sources/ft_memdel.c
        libft/sources/ft_memmove.c
        libft/sources/ft_memset.c
        libft/sources/ft_number_length.c
        libft/sources/ft_putchar.c
        libft/sources/ft_putchar_fd.c
        libft/sources/ft_putendl.c
        libft/sources/ft_putendl_fd.c
        libft/sources/ft_putnbr.c
        libft/sources/ft_putnbr_fd.c
        libft/sources/ft_putnbrll.c
        libft/sources/ft_putstr.c
        libft/sources/ft_putstr_fd.c
        libft/sources/ft_sdel.c
        libft/sources/ft_strcat.c
        libft/sources/ft_strchr.c
        libft/sources/ft_strchri.c
        libft/sources/ft_strclr.c
        libft/sources/ft_strcmp.c
        libft/sources/ft_strcpy.c
        libft/sources/ft_strdel.c
        libft/sources/ft_strdup.c
        libft/sources/ft_strequ.c
        libft/sources/ft_striter.c
        libft/sources/ft_striteri.c
        libft/sources/ft_strjoin.c
        libft/sources/ft_strlcat.c
        libft/sources/ft_strlen.c
        libft/sources/ft_strmap.c
        libft/sources/ft_strmapi.c
        libft/sources/ft_strncat.c
        libft/sources/ft_strncmp.c
        libft/sources/ft_strncpy.c
        libft/sources/ft_strnequ.c
        libft/sources/ft_strnew.c
        libft/sources/ft_strnlen.c
        libft/sources/ft_strnstr.c
        libft/sources/ft_strrchr.c
        libft/sources/ft_strsplit.c
        libft/sources/ft_strstr.c
        libft/sources/ft_strsub.c
        libft/sources/ft_strtrim.c
        libft/sources/ft_tolower.c
        libft/sources/ft_toupper.c
        libft/sources/get_next_line.c
        sources/algorithm.c
        sources/init.c
        sources/main.c
        sources/solver.c
        sources/tools.c)
